--- a/app/src/main/res/layout/content_single_movie.xml
+++ b/app/src/main/res/layout/content_single_movie.xml
@@ -34,26 +34,11 @@
                 android:id="@+id/info"
                 android:layout_width="236dp"
                 android:layout_height="150dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="schubwerner\nghas"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/titleimage"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <RatingBar
-                android:id="@+id/avgstory"
-                style="@style/Widget.AppCompat.RatingBar.Indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:numStars="8"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <Space
                 android:id="@+id/space"
@@ -65,17 +50,265 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/info" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="Story"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/space" />
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/titleimage">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:text="Story"
+                    android:textAlignment="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteX="189dp" />
+
+                <RatingBar
+                    android:id="@+id/rb_story"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Writing"
+                    android:textAlignment="center" />
+
+                <RatingBar
+                    android:id="@+id/rb_writing"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Music"
+                    android:textAlignment="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteX="189dp" />
+
+                <RatingBar
+                    android:id="@+id/rb_music"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Actors"
+                    android:textAlignment="center" />
+
+                <RatingBar
+                    android:id="@+id/rb_actors"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Effects"
+                    android:textAlignment="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteX="189dp" />
+
+                <RatingBar
+                    android:id="@+id/rb_effects"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Camera and Scenes"
+                    android:textAlignment="center" />
+
+                <RatingBar
+                    android:id="@+id/rb_camera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+                <RatingBar
+                    android:id="@+id/rb_entertaining"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Entertaining"
+                    android:textAlignment="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteX="189dp" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+                    android:background="@color/colorPrimary" />
+
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Expected Overall Score"
+                    android:textAlignment="center" />
+
+                <RatingBar
+                    android:id="@+id/rb_overall2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginStart="55dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Overall Score"
+                    android:textAlignment="center" />
+
+                <RatingBar
+                    android:id="@+id/rb_overall"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginTop="0dp"
+                    android:isIndicator="true"
+                    android:numStars="8"
+                    android:stepSize="0.1"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    tools:layout_editor_absoluteX="85dp" />
+
+
+
+            </LinearLayout>
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
 
